--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "illuminate/database": "~5.4",
         "illuminate/pagination": "~5.4",
         "illuminate/queue": "~5.4",
-        "illuminate/support": "~5.4"
+        "illuminate/support": "~5.4",
+        "hallelujahbaby/scws": "^1.0"
     },
     "require-dev": {
         "mockery/mockery": "~0.9",
