--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "autoload": {
         "psr-4": {
-            "TeamTNT\\Scout\\": "src/"
+            "Hallelujahbaby\\Scout\\": "src/"
         }
     },
     "autoload-dev": {
